# Poke

./: .gitignore  force_fix_exploration_grid_method.py  patch_interrupt_state.py  patch_reward_blocked_action.py  patch_windows_mp.py  pyproject.toml  repair_resume_and_raw_grid.py
.matplotlib_cache/: fontlist-v390.json
pokemon_hrl/: __init__.py  paths.py  types.py
pokemon_hrl/config/: __init__.py  base.yaml  hrl_config.yaml  planner_system_prompt.txt
pokemon_hrl/env/: base_hrl_env.py  goal_memory.py  interactive_env.py  mode_steps.py  planner_sync.py  progress_wrapper.py  unwrap.py
pokemon_hrl/execution/: action_masks.py  action_space.py  dialog.py  executor.py  low_level.py  npc_tiles.py  tile_blocked.py  tile_controller.py
pokemon_hrl/knowledge/: __init__.py  planner_knowledge.py  red_maps.py  red_plan_fallback.py  red_plan_validator.py  red_story_facts.py
pokemon_hrl/loop/: checkpoint.py  orchestrator.py  policy_loader.py  run.py  trainer.py  vecenv_shim.py
pokemon_hrl/mode/: progress.py  selector.py  subgoal.py
pokemon_hrl/planner/: base.py  criteria.py  descriptions.py  factory.py  logging.py  mock.py  openrouter.py  progression.py  prompt.py  replan.py  rule_based.py  validation.py
pokemon_hrl/pokemonred_puffer/: __init__.py  cleanrl_puffer.py  environment.py  eval.py  profile.py  save_town_state.py  train.py
pokemon_hrl/rewards/: __init__.py  interactive_mode.py
pokemon_hrl/scripts/: debug_goal_memory.py  verify_pipeline.py
pokemon_hrl/summarizer/: __init__.py  base.py  mapping.py  rule_based.py
scripts/: setup_server.sh
(+50 files in other folders)
